2010-10-14  Dan Fandrich <dan@coneharvesters.com>

	* Fixed some invalid format specifiers and typecasts. This caused a
	  problem on mingw32, at least.

2010-10-07  Dan Fandrich <dan@coneharvesters.com>

	* Refactored MakerNote detection code to put detection of each type
	  into the module handling that type

2010-09-23  Dan Fandrich <dan@coneharvesters.com>

	* exif_entry_dump() now displays the correct tag name for GPS tags by
	  taking the IFD into account when looking up the name. Fixes
	  bug #3073307.

2010-08-11  Dan Fandrich <dan@coneharvesters.com>

	* Removed redundant sentence. Fixes Ubuntu bug #197306

2010-07-23  Dan Fandrich <dan@coneharvesters.com>

	* Canon EOS 5D Mark II writes Aperture values as invalid values
	  0x80000000/1 which makes pow() throw floating-point exceptions

2010-06-16  Dan Fandrich <dan@coneharvesters.com>

	* po/da.po: Updated Danish translation by Joe Hansen
	* po/it.po: Updated Italian translation by Sergio Zanchetta 
	* po/nl.po: Updated Dutch translation by Erwin Poeze

2010-02-18  Dan Fandrich <dan@coneharvesters.com>

	* po/da.po: Updated Danish translation by Joe Hansen
	* po/de.po: Updated German translation by Marcus Meissner
	* po/ja.po: Updated Japanese translation by Tadashi Jokagi
	* po/pl.po: Updated Polish translation by Jakub Bogusz
	* po/vi.po: Updated Vietnamese translation by Clytie Siddall

2010-02-05  Dan Fandrich <dan@coneharvesters.com>

	* Made the case of text output be more consistent. Now, tag titles
	  have each word capitalized (like a title) and tag values
	  are always lower case, except the first word which is capitalized
	  (more like a sentence).

2010-01-25  Dan Fandrich <dan@coneharvesters.com>

	* configure.ac: Turned on the --enable-silent-rules configure option

2009-12-30  Dan Fandrich <dan@coneharvesters.com>

	* po/da.po: Updated Danish translation by Joe Hansen
	* po/sk.po: Updated Slovak translation by Ivan Masár
	* po/sv.po: Updated Swedish translation by Daniel Nylander
