@@ -6,6 +6,7 @@ libexif-0.6.x:
   * Changed a lot of strings to make the case of the text more consistent
   * exif_entry_dump() now displays the correct tag name for GPS tags
   * Fixed some invalid format specifiers that caused problems on some platforms
+  * Display rational numbers with the right number of significant figures
 
 libexif-0.6.19 (2009-11-12):
   * New translations: be, en_GB, it, ja, pt, sq, zh_CN
